客户端(Android): 大刀阔斧的重构，为加新功能做准备